--- a/style.css
+++ b/style.css
@@ -69,6 +69,12 @@ letter-spacing: 1px;
 
         /* Header */
         .header-container {
+            
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+            z-index: 1000;
             display: flex;
             align-items: center;
             justify-content: space-between;
